force-app/main/default/objects/Translation__c/fields/ca__c.field-meta.xml
<CustomField>
    <fullName>ca__c</fullName>
    <description>Catalan value of the record value.</description>
    <inlineHelpText>Catalan value of the record value.</inlineHelpText>
    <label>Catalan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>