force-app/main/default/objects/Translation__c/fields/ca_Rich__c.field-meta.xml
<CustomField>
    <fullName>ca_Rich__c</fullName>
    <description>Catalan rich text value of the record value.</description>
    <inlineHelpText>Catalan rich text value of the record value.</inlineHelpText>
    <label>Catalan Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>