force-app/main/default/objects/Translation__c/fields/da__c.field-meta.xml
<CustomField>
    <fullName>da__c</fullName>
    <description>Danish value of the record value.</description>
    <inlineHelpText>Danish value of the record value.</inlineHelpText>
    <label>Danish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>