force-app/main/default/objects/Translation__c/fields/da_Rich__c.field-meta.xml
<CustomField>
    <fullName>da_Rich__c</fullName>
    <description>Danish rich text value of the record value.</description>
    <inlineHelpText>Danish rich text value of the record value.</inlineHelpText>
    <label>Danish Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>