force-app/main/default/objects/Translation__c/fields/de__c.field-meta.xml
<CustomField>
    <fullName>de__c</fullName>
    <description>German value of the record value.</description>
    <inlineHelpText>German value of the record value.</inlineHelpText>
    <label>German</label>
    <length>255</length>
    <type>Text</type>
</CustomField>