force-app/main/default/objects/Translation__c/fields/de_Rich__c.field-meta.xml
<CustomField>
    <fullName>de_Rich__c</fullName>
    <description>German rich text value of the record value.</description>
    <inlineHelpText>German rich text value of the record value.</inlineHelpText>
    <label>German Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>