force-app/main/default/objects/Translation__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <description>Default value of the record value.</description>
    <inlineHelpText>Default value of the record value.</inlineHelpText>
    <label>Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>