force-app/main/default/objects/Translation__c/fields/Default_Rich__c.field-meta.xml
<CustomField>
    <fullName>Default_Rich__c</fullName>
    <description>Default rich text value of the record value.</description>
    <inlineHelpText>Default rich text value of the record value.</inlineHelpText>
    <label>Default Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>