force-app/main/default/objects/Translation__c/fields/en__c.field-meta.xml
<CustomField>
    <fullName>en__c</fullName>
    <description>English value of the record value.</description>
    <inlineHelpText>English value of the record value.</inlineHelpText>
    <label>English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>