force-app/main/default/objects/Translation__c/fields/en_Rich__c.field-meta.xml
<CustomField>
    <fullName>en_Rich__c</fullName>
    <description>English rich text value of the record value.</description>
    <inlineHelpText>English rich text value of the record value.</inlineHelpText>
    <label>English Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>