force-app/main/default/objects/Translation__c/fields/es__c.field-meta.xml
<CustomField>
    <fullName>es__c</fullName>
    <description>Spanish value of the record value.</description>
    <inlineHelpText>Spanish value of the record value.</inlineHelpText>
    <label>Spanish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>