force-app/main/default/objects/Translation__c/fields/es_Rich__c.field-meta.xml
<CustomField>
    <fullName>es_Rich__c</fullName>
    <description>Spanish rich text value of the record value.</description>
    <inlineHelpText>Spanish rich text value of the record value.</inlineHelpText>
    <label>Spanish Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>