force-app/main/default/objects/Translation__c/fields/fi__c.field-meta.xml
<CustomField>
    <fullName>fi__c</fullName>
    <description>Finnish value of the record value.</description>
    <inlineHelpText>Finnish value of the record value.</inlineHelpText>
    <label>Finnish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>