force-app/main/default/objects/Translation__c/fields/fi_Rich__c.field-meta.xml
<CustomField>
    <fullName>fi_Rich__c</fullName>
    <description>Finnish rich text value of the record value.</description>
    <inlineHelpText>Finnish rich text value of the record value.</inlineHelpText>
    <label>Finnish Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>