force-app/main/default/objects/Translation__c/fields/For_Field__c.field-meta.xml
<CustomField>
    <fullName>For_Field__c</fullName>
    <description>The field name for translation.</description>
    <inlineHelpText>The field name for translation.</inlineHelpText>
    <label>For Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>