force-app/main/default/objects/Translation__c/fields/For_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>For_Field_API_Name__c</fullName>
    <description>The field API name for translation.</description>
    <inlineHelpText>The field API name for translation.</inlineHelpText>
    <label>For Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>