force-app/main/default/objects/Translation__c/fields/fr__c.field-meta.xml
<CustomField>
    <fullName>fr__c</fullName>
    <description>French value of the record value.</description>
    <inlineHelpText>French value of the record value.</inlineHelpText>
    <label>French</label>
    <length>255</length>
    <type>Text</type>
</CustomField>