force-app/main/default/objects/Translation__c/fields/fr_Rich__c.field-meta.xml
<CustomField>
    <fullName>fr_Rich__c</fullName>
    <description>French rich text value of the record value.</description>
    <inlineHelpText>French rich text value of the record value.</inlineHelpText>
    <label>French Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>