force-app/main/default/objects/Translation__c/fields/it__c.field-meta.xml
<CustomField>
    <fullName>it__c</fullName>
    <description>Italian value of the record value.</description>
    <inlineHelpText>Italian value of the record value.</inlineHelpText>
    <label>Italian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>