force-app/main/default/objects/Translation__c/fields/it_Rich__c.field-meta.xml
<CustomField>
    <fullName>it_Rich__c</fullName>
    <description>Italian rich text value of the record value.</description>
    <inlineHelpText>Italian rich text value of the record value.</inlineHelpText>
    <label>Italian Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>