force-app/main/default/objects/Translation__c/fields/ja__c.field-meta.xml
<CustomField>
    <fullName>ja__c</fullName>
    <description>Japanese value of the record value.</description>
    <inlineHelpText>Japanese value of the record value.</inlineHelpText>
    <label>Japanese</label>
    <length>255</length>
    <type>Text</type>
</CustomField>