force-app/main/default/objects/Translation__c/fields/ja_Rich__c.field-meta.xml
<CustomField>
    <fullName>ja_Rich__c</fullName>
    <description>Japanese rich text value of the record value.</description>
    <inlineHelpText>Japanese rich text value of the record value.</inlineHelpText>
    <label>Japanese Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>