force-app/main/default/objects/Translation__c/fields/ko__c.field-meta.xml
<CustomField>
    <fullName>ko__c</fullName>
    <description>Korean value of the record value.</description>
    <inlineHelpText>Korean value of the record value.</inlineHelpText>
    <label>Korean</label>
    <length>255</length>
    <type>Text</type>
</CustomField>