force-app/main/default/objects/Translation__c/fields/ko_Rich__c.field-meta.xml
<CustomField>
    <fullName>ko_Rich__c</fullName>
    <description>Korean rich text value of the record value.</description>
    <inlineHelpText>Korean rich text value of the record value.</inlineHelpText>
    <label>Korean Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>