force-app/main/default/objects/Translation__c/fields/nl__c.field-meta.xml
<CustomField>
    <fullName>nl__c</fullName>
    <description>Dutch value of the record value.</description>
    <inlineHelpText>Dutch value of the record value.</inlineHelpText>
    <label>Dutch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>