force-app/main/default/objects/Translation__c/fields/nl_Rich__c.field-meta.xml
<CustomField>
    <fullName>nl_Rich__c</fullName>
    <description>Dutch rich text value of the record value.</description>
    <inlineHelpText>Dutch rich text value of the record value.</inlineHelpText>
    <label>Dutch Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>