force-app/main/default/objects/Translation__c/fields/no__c.field-meta.xml
<CustomField>
    <fullName>no__c</fullName>
    <description>Norweigian value of the record value.</description>
    <inlineHelpText>Norweigian value of the record value.</inlineHelpText>
    <label>Norweigian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>