force-app/main/default/objects/Translation__c/fields/no_Rich__c.field-meta.xml
<CustomField>
    <fullName>no_Rich__c</fullName>
    <description>Norweigian rich text value of the record value.</description>
    <inlineHelpText>Norweigian rich text value of the record value.</inlineHelpText>
    <label>Norweigian Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>