force-app/main/default/objects/Translation__c/fields/pt__c.field-meta.xml
<CustomField>
    <fullName>pt__c</fullName>
    <description>Portuguese value of the record value.</description>
    <inlineHelpText>Portuguese value of the record value.</inlineHelpText>
    <label>Portuguese</label>
    <length>255</length>
    <type>Text</type>
</CustomField>