force-app/main/default/objects/Translation__c/fields/pt_Rich__c.field-meta.xml
<CustomField>
    <fullName>pt_Rich__c</fullName>
    <description>Portuguese rich text value of the record value.</description>
    <inlineHelpText>Portuguese rich text value of the record value.</inlineHelpText>
    <label>Portuguese Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>