force-app/main/default/objects/Translation__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Record Name of the reference record.</description>
    <inlineHelpText>Record Name of the reference record.</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>