force-app/main/default/objects/Translation__c/fields/ru__c.field-meta.xml
<CustomField>
    <fullName>ru__c</fullName>
    <description>Russian value of the record value.</description>
    <inlineHelpText>Russian value of the record value.</inlineHelpText>
    <label>Russian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>