force-app/main/default/objects/Translation__c/fields/ru_Rich__c.field-meta.xml
<CustomField>
    <fullName>ru_Rich__c</fullName>
    <description>Russian rich text value of the record value.</description>
    <inlineHelpText>Russian rich text value of the record value.</inlineHelpText>
    <label>Russian Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>