force-app/main/default/objects/Translation__c/fields/sv__c.field-meta.xml
<CustomField>
    <fullName>sv__c</fullName>
    <description>Swedish value of the record value.</description>
    <inlineHelpText>Swedish value of the record value.</inlineHelpText>
    <label>Swedish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>