force-app/main/default/objects/Translation__c/fields/sv_Rich__c.field-meta.xml
<CustomField>
    <fullName>sv_Rich__c</fullName>
    <description>Swedish rich text value of the record value.</description>
    <inlineHelpText>Swedish rich text value of the record value.</inlineHelpText>
    <label>Swedish Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>