force-app/main/default/objects/Translation__c/fields/th__c.field-meta.xml
<CustomField>
    <fullName>th__c</fullName>
    <description>Thai value of the record value.</description>
    <inlineHelpText>Thai value of the record value.</inlineHelpText>
    <label>Thai</label>
    <length>255</length>
    <type>Text</type>
</CustomField>