force-app/main/default/objects/Translation__c/fields/th_Rich__c.field-meta.xml
<CustomField>
    <fullName>th_Rich__c</fullName>
    <description>Thai rich text value of the record value.</description>
    <inlineHelpText>Thai rich text value of the record value.</inlineHelpText>
    <label>Thai Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>