force-app/main/default/objects/Translation__c/fields/zh__c.field-meta.xml
<CustomField>
    <fullName>zh__c</fullName>
    <description>Chinese value of the record value.</description>
    <inlineHelpText>Chinese value of the record value.</inlineHelpText>
    <label>Chinese</label>
    <length>255</length>
    <type>Text</type>
</CustomField>