force-app/main/default/objects/Translation__c/fields/zh_Rich__c.field-meta.xml
<CustomField>
    <fullName>zh_Rich__c</fullName>
    <description>Chinese rich text value of the record value.</description>
    <inlineHelpText>Chinese rich text value of the record value.</inlineHelpText>
    <label>Chinese Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>